<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:ignore="Autofill">

    <EditText
        android:id="@+id/class_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/class_name_required"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/class_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/section"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/class_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/room"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/class_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName" />
</LinearLayout>