<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    tools:context=".activities.CompilerActivity"
    app:umanoPanelHeight="70dp"
    app:umanoShadowHeight="5dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <Spinner
            android:layout_weight="0.3"
            android:id="@+id/languagesSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/languages"
            android:spinnerMode="dialog"
            />

        <Switch
            android:id="@+id/input"
            android:layout_weight="0.4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/input"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.3"
            android:layout_height="match_parent" >
        <ImageButton
        android:id="@+id/clearAll"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
            android:layout_weight="1"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_all_text"
            app:srcCompat="@drawable/ic_delete_forever"
        />

            <ImageButton
                android:id="@+id/textDec"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/decreasing_the_font"
                app:srcCompat="@drawable/ic_font_dec"

                />

            <ImageButton

                android:id="@+id/textInc"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/increasing_the_font"
                app:srcCompat="@drawable/ic_inc_font" />
    </LinearLayout>


    </LinearLayout>


    <xyz.iridiumion.iridiumhighlightingeditor.editor.IridiumHighlightingEditorJ
        android:id="@+id/editor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start|top"

        android:inputType="textMultiLine"
        android:padding="2dp"
        android:scrollbars="vertical"
        android:textColor="@color/editor_text"
        android:textSize="12sp"

        android:typeface="monospace"

        app:layout_constraintBottom_toTopOf="@+id/quickBtnList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="Overdraw" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/run_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/quickBtnList"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_play" />

    <ProgressBar
        android:id="@+id/runningBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quickBtnList"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/outPut_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/outputlayout"/>
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>